basic structure done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gameboy Advanced SP</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="container-console">
+            <div class="container-screen">
+                <div id="screen-up">a</div>
+                <div id="screen-screen">
+                    <div>borde</div>
+                    <div>pantalla</div>
+                    <div>borde</div>
+                </div>
+                <div id="screen-down">c</div>
+            </div>
+            <div class="container-axis">
+                <div id="container-axis-1">1</div>
+                <div id="container-axis-2">2</div>
+                <div id="container-axis-3">3</div>
+                <div id="container-axis-4">4</div>
+                <div id="container-axis-5">5</div>
+            </div>
+            <div class="container-buttons">
+                <div id="container-buttons-light">1</div>
+                <div id="container-buttons-control">2</div>
+                <div id="container-buttons-grill">3</div>
+                <div id="container-buttons-start">4</div>
+                <div id="container-buttons-small">5</div>
+                <div id="container-buttons-down">6</div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
