--- a/index.html
+++ b/index.html
@@ -30,11 +30,31 @@
             </div>
             <div class="container-buttons">
                 <div id="container-buttons-light">1</div>
-                <div id="container-buttons-control">2</div>
+                <div id="container-buttons-control">
+                    <div id="control-arrows">
+                        <div class="arrows" id="arrows-top">
+                            <div id="top-left"></div>
+                            <div id="top-center"></div>
+                            <div id="top-right"></div>
+                        </div>
+                        <div class="arrows" id="arrows-center">
+                            <div id="center-left"></div>
+                            <div id="center-center">
+                                <div id="circle"></div>
+                            </div>
+                            <div id="center-right"></div>
+                        </div>
+                        <div class="arrows" id="arrows-bottom">
+                            <div id="bottom-left"></div>
+                            <div id="bottom-center"></div>
+                            <div id="bottom-right"></div>
+                        </div>
+                    </div>
+                    <div id="control-buttons">b</div>
+                </div>
                 <div id="container-buttons-grill">3</div>
                 <div id="container-buttons-start">4</div>
                 <div id="container-buttons-small">5</div>
-                <div id="container-buttons-down">6</div>
             </div>
         </div>
     </div>
