--- a/index.html
+++ b/index.html
@@ -13,13 +13,37 @@
     <div class="container">
         <div class="container-console">
             <div class="container-screen">
-                <div id="screen-up">a</div>
-                <div id="screen-screen">
-                    <div>borde</div>
-                    <div>pantalla</div>
-                    <div>borde</div>
+                <div id="screen-up">
+                    <div id="screen-up-left">
+                        <div id="sc-up-lft"></div>
+                    </div>
+                    <div id="screen-up-center">
+                        <div id="sc-up-cnt"></div>
+                    </div>
+                    <div id="screen-up-right">
+                        <div id="sc-up-rght"></div>
+                    </div>
                 </div>
-                <div id="screen-down">c</div>
+                <div id="screen-screen">
+                    <div id="gmb-adv-sp"> 
+                        <div id="gmb-up"></div>
+                        <div id="final-screen"></div>
+                        <div id="gmb-down">
+                            <div id="gmb-title"></div>
+                        </div>
+                    </div>
+                </div>
+                <div id="screen-down">
+                    <div id="screen-down-left">
+                        <div id="sc-dwn-lft"></div>
+                    </div>
+                    <div id="screen-down-center">
+                
+                    </div>
+                    <div id="screen-down-right">
+                        <div id="sc-dwn-rght"></div>
+                    </div>
+                </div>
             </div>
             <div class="container-axis">
                 <div id="container-axis-1">1</div>
