--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gameboy Advanced SP</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
 <body>
@@ -25,7 +27,7 @@
                     </div>
                 </div>
                 <div id="screen-screen">
-                    <div id="gmb-adv-sp"> 
+                    <div id="gmb-adv-sp">
                         <div id="gmb-up"></div>
                         <div id="final-screen"></div>
                         <div id="gmb-down">
@@ -38,7 +40,7 @@
                         <div id="sc-dwn-lft"></div>
                     </div>
                     <div id="screen-down-center">
-                
+
                     </div>
                     <div id="screen-down-right">
                         <div id="sc-dwn-rght"></div>
@@ -46,14 +48,30 @@
                 </div>
             </div>
             <div class="container-axis">
-                <div id="container-axis-1">1</div>
-                <div id="container-axis-2">2</div>
-                <div id="container-axis-3">3</div>
-                <div id="container-axis-4">4</div>
-                <div id="container-axis-5">5</div>
+                <div id="container-axis-1"></div>
+                <div id="container-axis-2"></div>
+                <div id="container-axis-3"></div>
+                <div id="container-axis-4"></div>
+                <div id="container-axis-5"></div>
             </div>
             <div class="container-buttons">
-                <div id="container-buttons-light">1</div>
+                <div id="container-buttons-light">
+                    <div id="light-nothing"></div>
+                    <div id="light-button">
+                        <div id="light-button-circle">
+                            <span id="icon" class="material-symbols-outlined">
+                                light_mode
+                            </span>
+                        </div>
+                    </div>
+                    <div id="light-2lights">
+                        <div>
+                        <div class="lightlight"></div>
+                        <div id="lights-space"></div>
+                        <div class="lightlight"></div>
+                    </div>
+                    </div>
+                </div>
                 <div id="container-buttons-control">
                     <div id="control-arrows">
                         <div class="arrows" id="arrows-top">
@@ -74,11 +92,53 @@
                             <div id="bottom-right"></div>
                         </div>
                     </div>
-                    <div id="control-buttons">b</div>
+                    <div id="control-buttons">
+                        <div class="A-B"> 
+                            A
+                        </div>
+                        <div class="A-B">
+                            B
+                        </div>
+                    </div>
                 </div>
-                <div id="container-buttons-grill">3</div>
-                <div id="container-buttons-start">4</div>
-                <div id="container-buttons-small">5</div>
+                <div id="container-buttons-grill">
+                    <div class="grill-empty"></div>
+                    <div id="grill-grill">
+                        <div class="container-big-point">
+                            <div class="container-point"><div class="point"></div></div>
+                            <div class="container-point"><div class="point"></div></div>
+                            <div class="container-point"><div class="point"></div></div>
+                            <div class="container-point"><div class="point"></div></div>
+                        </div>
+                        <div class="container-big-point">
+                            <div class="container-point"><div class="point"></div></div>
+                            <div class="container-point"><div class="point"></div></div>
+                            <div class="container-point"><div class="point"></div></div>
+                            <div class="container-point"><div class="point"></div></div>
+                        </div>
+                        <div class="container-big-point">
+                            <div class="container-point"><div class="point"></div></div>
+                            <div class="container-point"><div class="point"></div></div>
+                            <div class="container-point"><div class="point"></div></div>
+                            <div class="container-point"><div class="point"></div></div>
+                        </div>
+                        <div class="container-big-point">
+                            <div class="container-point"><div class="point"></div></div>
+                            <div class="container-point"><div class="point"></div></div>
+                            <div class="container-point"><div class="point"></div></div>
+                            <div class="container-point"><div class="point"></div></div>
+                        </div>
+                    </div>
+                    <div class="grill-empty"></div>
+                </div>
+                <div id="container-buttons-start">
+                    <div id="select"><span class="ss">SELECT</span></div>
+                    <div id="start"><span class="ss">START</span> </div>
+                </div>
+                <div id="container-buttons-small">
+                    <div class="small-buttons"></div>
+                    <div class="small-buttons"></div>
+                </div>
             </div>
         </div>
     </div>
