javascript and gift

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                     <div id="light-2lights">
                         <div>
-                        <div class="lightlight"></div>
+                        <div id="greenlight" class="lightlight"></div>
                         <div id="lights-space"></div>
                         <div class="lightlight"></div>
                     </div>
@@ -136,12 +136,14 @@
                     <div id="start"><span class="ss">START</span> </div>
                 </div>
                 <div id="container-buttons-small">
-                    <div class="small-buttons"></div>
-                    <div class="small-buttons"></div>
+                    <button class="small-buttons"></button>
+                    <button class="small-buttons" id="on"></button>
                 </div>
             </div>
         </div>
     </div>
+
+    <script src="./javascript/main.js"></script>
 </body>
 
 </html>
