--- a/index.html
+++ b/index.html
@@ -12,100 +12,100 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container flex">
         <div class="container-console">
-            <div class="container-screen">
-                <div id="screen-up">
-                    <div id="screen-up-left">
+            <div class="container-screen background">
+                <div id="screen-up" class="background">
+                    <div id="screen-up-left" class="background">
                         <div id="sc-up-lft"></div>
                     </div>
-                    <div id="screen-up-center">
+                    <div id="screen-up-center" class="flex background">
                         <div id="sc-up-cnt"></div>
                     </div>
-                    <div id="screen-up-right">
+                    <div id="screen-up-right" class="background">
                         <div id="sc-up-rght"></div>
                     </div>
                 </div>
-                <div id="screen-screen">
+                <div id="screen-screen" class="flex background">
                     <div id="gmb-adv-sp">
                         <div id="gmb-up"></div>
                         <div id="final-screen"></div>
-                        <div id="gmb-down">
+                        <div id="gmb-down" class="flex">
                             <div id="gmb-title"></div>
                         </div>
                     </div>
                 </div>
-                <div id="screen-down">
-                    <div id="screen-down-left">
+                <div id="screen-down" class="background">
+                    <div id="screen-down-left" class="background">
                         <div id="sc-dwn-lft"></div>
                     </div>
-                    <div id="screen-down-center">
+                    <div id="screen-down-center" class="background">
 
                     </div>
-                    <div id="screen-down-right">
+                    <div id="screen-down-right" class="background">
                         <div id="sc-dwn-rght"></div>
                     </div>
                 </div>
             </div>
-            <div class="container-axis">
+            <div class="container-axis background">
                 <div id="container-axis-1"></div>
                 <div id="container-axis-2"></div>
                 <div id="container-axis-3"></div>
                 <div id="container-axis-4"></div>
                 <div id="container-axis-5"></div>
             </div>
-            <div class="container-buttons">
-                <div id="container-buttons-light">
-                    <div id="light-nothing"></div>
-                    <div id="light-button">
-                        <div id="light-button-circle">
+            <div class="container-buttons background">
+                <div id="container-buttons-light" class="background">
+                    <div id="light-nothing" class="background"></div>
+                    <div id="light-button" class="flex background">
+                        <div id="light-button-circle" class="flex">
                             <span id="icon" class="material-symbols-outlined">
                                 light_mode
                             </span>
                         </div>
                     </div>
-                    <div id="light-2lights">
+                    <div id="light-2lights" class="background">
                         <div>
                         <div id="greenlight" class="lightlight"></div>
-                        <div id="lights-space"></div>
+                        <div id="lights-space" class="background"></div>
                         <div class="lightlight"></div>
                     </div>
                     </div>
                 </div>
-                <div id="container-buttons-control">
-                    <div id="control-arrows">
-                        <div class="arrows" id="arrows-top">
-                            <div id="top-left"></div>
+                <div id="container-buttons-control" class="background">
+                    <div id="control-arrows" class="flex background">
+                        <div class="arrows flex" id="arrows-top">
+                            <div id="top-left" class="background"></div>
                             <div id="top-center"></div>
-                            <div id="top-right"></div>
+                            <div id="top-right" class="background"></div>
                         </div>
                         <div class="arrows" id="arrows-center">
                             <div id="center-left"></div>
-                            <div id="center-center">
+                            <div id="center-center" class="flex">
                                 <div id="circle"></div>
                             </div>
                             <div id="center-right"></div>
                         </div>
                         <div class="arrows" id="arrows-bottom">
-                            <div id="bottom-left"></div>
+                            <div id="bottom-left" class="background"></div>
                             <div id="bottom-center"></div>
-                            <div id="bottom-right"></div>
+                            <div id="bottom-right" class="background"></div>
                         </div>
                     </div>
-                    <div id="control-buttons">
-                        <div class="A-B"> 
+                    <div id="control-buttons" class="background">
+                        <div class="A-B flex"> 
                             A
                         </div>
-                        <div class="A-B">
+                        <div class="A-B flex">
                             B
                         </div>
                     </div>
                 </div>
-                <div id="container-buttons-grill">
-                    <div class="grill-empty"></div>
-                    <div id="grill-grill">
+                <div id="container-buttons-grill" class="flex background">
+                    <div class="grill-empty background"></div>
+                    <div id="grill-grill" class="background">
                         <div class="container-big-point">
-                            <div class="container-point"><div class="point"></div></div>
+                            <div class="container-point flex"><div class="point"></div></div>
                             <div class="container-point"><div class="point"></div></div>
                             <div class="container-point"><div class="point"></div></div>
                             <div class="container-point"><div class="point"></div></div>
@@ -131,12 +131,12 @@
                     </div>
                     <div class="grill-empty"></div>
                 </div>
-                <div id="container-buttons-start">
-                    <div id="select"><span class="ss">SELECT</span></div>
-                    <div id="start"><span class="ss">START</span> </div>
+                <div id="container-buttons-start" class="background">
+                    <div id="select" class="background"><span class="ss">SELECT</span></div>
+                    <div id="start" class="background"><span class="ss">START</span> </div>
                 </div>
-                <div id="container-buttons-small">
-                    <button class="small-buttons"></button>
+                <div id="container-buttons-small" class="background">
+                    <button class="small-buttons" id="off"></button>
                     <button class="small-buttons" id="on"></button>
                 </div>
             </div>
